--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "build": {
-    "installCommand": "npm install --legacy-peer-deps",
-    "command": "npm run build",
-    "outputDirectory": "build"
-  }
+  "buildCommand": "next build"
 }
