--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "scripts": {
+  "preinstall": "npx npm@latest install --legacy-peer-deps",
+  "build": "react-scripts build"
+},
+
   "dependencies": {
     "clsx": "^2.1.1",
     "react": "^18.2.0",
