--- a/package.json
+++ b/package.json
@@ -9,18 +9,13 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "scripts": {
-  "preinstall": "npx npm@latest install --legacy-peer-deps",
-  "build": "react-scripts build"
-},
-
+  
   "dependencies": {
     "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
-    "react-scroll": "^1.9.0",
-    "react-slidedown": "^2.4.7"
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
