--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  
   "dependencies": {
+    "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
